# Star-detector

./: Cargo.toml  README.md
src/: centroid.rs  lib.rs  main.rs  threshold.rs
